micro-compiler/SourceCode/y.output
Grammar

    0 $accept: system_goal $end

    1 system_goal: program _SCANEOF

    2 program: _BEGIN statement_list _END

    3 statement_list: statement
    4               | statement_list statement

    5 statement: _ID _ASSIGN_OP expression _SEMICOLON
    6          | _READ _LPAREN id_list _RPAREN _SEMICOLON
    7          | _WRITE _LPAREN expr_list _RPAREN _SEMICOLON

    8 id_list: _ID
    9        | id_list _COMMA _ID

   10 expr_list: expression
   11          | expr_list _COMMA expression

   12 expression: primary
   13           | expression add_op primary

   14 primary: _LPAREN expression _RPAREN
   15        | _ID
   16        | _INTLITERAL
   17        | _PLUOP primary
   18        | _MINUSOP primary

   19 add_op: _PLUOP
   20       | _MINUSOP


Terminals, with rules where they appear

$end (0) 0
error (256)
_BEGIN (258) 2
_END (259) 2
_READ (260) 6
_WRITE (261) 7
_LPAREN (262) 6 7 14
_RPAREN (263) 6 7 14
_SEMICOLON (264) 5 6 7
_COMMA (265) 9 11
_ASSIGN_OP (266) 5
_PLUOP (267) 17 19
_MINUSOP (268) 18 20
_SCANEOF (269) 1
_INTLITERAL (270) 16
_ID (271) 5 8 9 15


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
system_goal (18)
    on left: 1, on right: 0
program (19)
    on left: 2, on right: 1
statement_list (20)
    on left: 3 4, on right: 2 4
statement (21)
    on left: 5 6 7, on right: 3 4
id_list (22)
    on left: 8 9, on right: 6 9
expr_list (23)
    on left: 10 11, on right: 7 11
expression (24)
    on left: 12 13, on right: 5 10 11 13 14
primary (25)
    on left: 14 15 16 17 18, on right: 12 13 17 18
add_op (26)
    on left: 19 20, on right: 13


State 0

    0 $accept: . system_goal $end

    _BEGIN  shift, and go to state 1

    system_goal  go to state 2
    program      go to state 3


State 1

    2 program: _BEGIN . statement_list _END

    _READ   shift, and go to state 4
    _WRITE  shift, and go to state 5
    _ID     shift, and go to state 6

    statement_list  go to state 7
    statement       go to state 8


State 2

    0 $accept: system_goal . $end

    $end  shift, and go to state 9


State 3

    1 system_goal: program . _SCANEOF

    _SCANEOF  shift, and go to state 10


State 4

    6 statement: _READ . _LPAREN id_list _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 11


State 5

    7 statement: _WRITE . _LPAREN expr_list _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 12


State 6

    5 statement: _ID . _ASSIGN_OP expression _SEMICOLON

    _ASSIGN_OP  shift, and go to state 13


State 7

    2 program: _BEGIN statement_list . _END
    4 statement_list: statement_list . statement

    _END    shift, and go to state 14
    _READ   shift, and go to state 4
    _WRITE  shift, and go to state 5
    _ID     shift, and go to state 6

    statement  go to state 15


State 8

    3 statement_list: statement .

    $default  reduce using rule 3 (statement_list)


State 9

    0 $accept: system_goal $end .

    $default  accept


State 10

    1 system_goal: program _SCANEOF .

    $default  reduce using rule 1 (system_goal)


State 11

    6 statement: _READ _LPAREN . id_list _RPAREN _SEMICOLON

    _ID  shift, and go to state 16

    id_list  go to state 17


State 12

    7 statement: _WRITE _LPAREN . expr_list _RPAREN _SEMICOLON

    _LPAREN      shift, and go to state 18
    _PLUOP       shift, and go to state 19
    _MINUSOP     shift, and go to state 20
    _INTLITERAL  shift, and go to state 21
    _ID          shift, and go to state 22

    expr_list   go to state 23
    expression  go to state 24
    primary     go to state 25


State 13

    5 statement: _ID _ASSIGN_OP . expression _SEMICOLON

    _LPAREN      shift, and go to state 18
    _PLUOP       shift, and go to state 19
    _MINUSOP     shift, and go to state 20
    _INTLITERAL  shift, and go to state 21
    _ID          shift, and go to state 22

    expression  go to state 26
    primary     go to state 25


State 14

    2 program: _BEGIN statement_list _END .

    $default  reduce using rule 2 (program)


State 15

    4 statement_list: statement_list statement .

    $default  reduce using rule 4 (statement_list)


State 16

    8 id_list: _ID .

    $default  reduce using rule 8 (id_list)


State 17

    6 statement: _READ _LPAREN id_list . _RPAREN _SEMICOLON
    9 id_list: id_list . _COMMA _ID

    _RPAREN  shift, and go to state 27
    _COMMA   shift, and go to state 28


State 18

   14 primary: _LPAREN . expression _RPAREN

    _LPAREN      shift, and go to state 18
    _PLUOP       shift, and go to state 19
    _MINUSOP     shift, and go to state 20
    _INTLITERAL  shift, and go to state 21
    _ID          shift, and go to state 22

    expression  go to state 29
    primary     go to state 25


State 19

   17 primary: _PLUOP . primary

    _LPAREN      shift, and go to state 18
    _PLUOP       shift, and go to state 19
    _MINUSOP     shift, and go to state 20
    _INTLITERAL  shift, and go to state 21
    _ID          shift, and go to state 22

    primary  go to state 30


State 20

   18 primary: _MINUSOP . primary

    _LPAREN      shift, and go to state 18
    _PLUOP       shift, and go to state 19
    _MINUSOP     shift, and go to state 20
    _INTLITERAL  shift, and go to state 21
    _ID          shift, and go to state 22

    primary  go to state 31


State 21

   16 primary: _INTLITERAL .

    $default  reduce using rule 16 (primary)


State 22

   15 primary: _ID .

    $default  reduce using rule 15 (primary)


State 23

    7 statement: _WRITE _LPAREN expr_list . _RPAREN _SEMICOLON
   11 expr_list: expr_list . _COMMA expression

    _RPAREN  shift, and go to state 32
    _COMMA   shift, and go to state 33


State 24

   10 expr_list: expression .
   13 expression: expression . add_op primary

    _PLUOP    shift, and go to state 34
    _MINUSOP  shift, and go to state 35

    $default  reduce using rule 10 (expr_list)

    add_op  go to state 36


State 25

   12 expression: primary .

    $default  reduce using rule 12 (expression)


State 26

    5 statement: _ID _ASSIGN_OP expression . _SEMICOLON
   13 expression: expression . add_op primary

    _SEMICOLON  shift, and go to state 37
    _PLUOP      shift, and go to state 34
    _MINUSOP    shift, and go to state 35

    add_op  go to state 36


State 27

    6 statement: _READ _LPAREN id_list _RPAREN . _SEMICOLON

    _SEMICOLON  shift, and go to state 38


State 28

    9 id_list: id_list _COMMA . _ID

    _ID  shift, and go to state 39


State 29

   13 expression: expression . add_op primary
   14 primary: _LPAREN expression . _RPAREN

    _RPAREN   shift, and go to state 40
    _PLUOP    shift, and go to state 34
    _MINUSOP  shift, and go to state 35

    add_op  go to state 36


State 30

   17 primary: _PLUOP primary .

    $default  reduce using rule 17 (primary)


State 31

   18 primary: _MINUSOP primary .

    $default  reduce using rule 18 (primary)


State 32

    7 statement: _WRITE _LPAREN expr_list _RPAREN . _SEMICOLON

    _SEMICOLON  shift, and go to state 41


State 33

   11 expr_list: expr_list _COMMA . expression

    _LPAREN      shift, and go to state 18
    _PLUOP       shift, and go to state 19
    _MINUSOP     shift, and go to state 20
    _INTLITERAL  shift, and go to state 21
    _ID          shift, and go to state 22

    expression  go to state 42
    primary     go to state 25


State 34

   19 add_op: _PLUOP .

    $default  reduce using rule 19 (add_op)


State 35

   20 add_op: _MINUSOP .

    $default  reduce using rule 20 (add_op)


State 36

   13 expression: expression add_op . primary

    _LPAREN      shift, and go to state 18
    _PLUOP       shift, and go to state 19
    _MINUSOP     shift, and go to state 20
    _INTLITERAL  shift, and go to state 21
    _ID          shift, and go to state 22

    primary  go to state 43


State 37

    5 statement: _ID _ASSIGN_OP expression _SEMICOLON .

    $default  reduce using rule 5 (statement)


State 38

    6 statement: _READ _LPAREN id_list _RPAREN _SEMICOLON .

    $default  reduce using rule 6 (statement)


State 39

    9 id_list: id_list _COMMA _ID .

    $default  reduce using rule 9 (id_list)


State 40

   14 primary: _LPAREN expression _RPAREN .

    $default  reduce using rule 14 (primary)


State 41

    7 statement: _WRITE _LPAREN expr_list _RPAREN _SEMICOLON .

    $default  reduce using rule 7 (statement)


State 42

   11 expr_list: expr_list _COMMA expression .
   13 expression: expression . add_op primary

    _PLUOP    shift, and go to state 34
    _MINUSOP  shift, and go to state 35

    $default  reduce using rule 11 (expr_list)

    add_op  go to state 36


State 43

   13 expression: expression add_op primary .

    $default  reduce using rule 13 (expression)
